# vision-interciclo

./: CMakeLists.txt
models/: dncnn_25.onnx
src/: CompareWindow.cpp  CompareWindow.hpp  QtMainWindow.cpp  QtMainWindow.hpp  Stats.hpp  dnn_denoising.cpp  dnn_denoising.hpp  highlight.cpp  itk_loader.cpp  itk_loader.hpp  itk_opencv_bridge.cpp  itk_opencv_bridge.hpp  main.cpp  processing.cpp  processing.hpp  qt_main.cpp
